<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".screen.home.HomeScreen">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchHappiness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@id/switchGiving"
        app:layout_constraintEnd_toStartOf="@id/switchOptimism"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:useMaterialThemeColors="false" />

    <TextView
        android:id="@+id/textViewHappiness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/happiness"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/switchHappiness"
        app:layout_constraintStart_toStartOf="@id/switchHappiness"
        app:layout_constraintTop_toBottomOf="@id/switchHappiness" />


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchOptimism"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@id/switchKindness"
        app:layout_constraintStart_toEndOf="@id/switchHappiness"
        app:layout_constraintTop_toTopOf="@id/switchHappiness"
        app:useMaterialThemeColors="false" />

    <TextView
        android:id="@+id/textViewOptimism"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/optimism"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/switchOptimism"
        app:layout_constraintStart_toStartOf="@id/switchOptimism"
        app:layout_constraintTop_toBottomOf="@id/switchOptimism" />


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchKindness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/switchOptimism"
        app:layout_constraintTop_toTopOf="@id/switchHappiness"
        app:useMaterialThemeColors="false" />

    <TextView
        android:id="@+id/textViewKindness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kindness"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/switchKindness"
        app:layout_constraintStart_toStartOf="@id/switchKindness"
        app:layout_constraintTop_toBottomOf="@id/switchKindness" />


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchGiving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@id/switchHappiness"
        app:layout_constraintTop_toBottomOf="@id/textViewHappiness"
        app:useMaterialThemeColors="false" />

    <TextView
        android:id="@+id/textViewGiving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/giving"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/switchGiving"
        app:layout_constraintStart_toStartOf="@id/switchGiving"
        app:layout_constraintTop_toBottomOf="@id/switchGiving" />


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchRespect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@id/switchEgo"
        app:layout_constraintStart_toEndOf="@id/switchGiving"
        app:layout_constraintTop_toTopOf="@id/switchGiving"
        app:useMaterialThemeColors="false" />

    <TextView
        android:id="@+id/textViewRespect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/respect"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/switchRespect"
        app:layout_constraintStart_toStartOf="@id/switchRespect"
        app:layout_constraintTop_toBottomOf="@id/switchRespect" />


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchEgo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/switchRespect"
        app:layout_constraintTop_toTopOf="@id/switchGiving"
        app:useMaterialThemeColors="false" />

    <TextView
        android:id="@+id/textViewEgo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ego"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/switchEgo"
        app:layout_constraintStart_toStartOf="@id/switchEgo"
        app:layout_constraintTop_toBottomOf="@id/switchEgo" />
</androidx.constraintlayout.widget.ConstraintLayout>